<resources>
    <string name="app_name">筷筷BUS</string>
    <string name="WXNotInstalled">系统未安装微信客户端</string>

    <string name="login_app_phone">手机号快捷登录</string>
    <string name="enter_phone_num_hint">请输入手机号</string>
    <string name="enter_identify_hint">请输入验证码</string>
    <string name="btn_identify">获取验证码</string>
    <string name="str_login">立即登录</string>
    <string name="login_tips">未注册的手机号验证后将自动创建账号</string>
    <string name="wx_login">微信一键登录</string>
    <string name="str_enter_app">进入筷筷BUS</string>
    <string name="str_user_agreement"><u>《用户协议》</u></string>
    <string name="server_error">非常抱歉，服务器异常，稍后请重试</string>
    <string name="identify_ing">正在获取</string>
    <string name="canNotNull">内容不能为空</string>
    <string name="phoneCanNotNull">手机号码不能为空</string>
    <string name="identityCanNotNull">验证码不能为空</string>
    <string name="errorPhoneNum">错误的手机号码,请重新输入</string>
    <string name="identify_again">重新获取</string>
    <string name="sec">秒</string>

    <string name="btn_add_path">新增行程</string>
    <string name="tx_line_path">选择线路</string>
    <string name="tx_start_time">出发时间</string>
    <string name="tx_seat">座位</string>
    <string name="get_all_path_empty">未获取到行程线路</string>

    <!--个人中心-->
    <string name="select_date_title">选择日期</string>
    <string name="am" translatable="false">AM</string>
    <string name="pm" translatable="false">PM</string>

    <!-- Button按钮文字 -->
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>

    <string name="save_to_photo">保存到相册</string>
    <string name="save_to_photo_success">图片已保存到相册</string>
    <string name="save_to_photo_fail">保存失败</string>

    <string name="header_pull">下拉刷新</string>
    <string name="footer_pull">上拉加载</string>
    <string name="header_pull_over">松开立即加载</string>
    <string name="header_refreshing">正在加载</string>

    <!-- 年月日 -->
    <string name="str_year">年</string>
    <string name="str_month">月</string>
    <string name="str_day">日</string>
    <string name="str_week">周</string>

    <string-array name="zhouX">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string-array name="hour_list">
        <item>未知</item>
        <item>00时</item>
        <item>01时</item>
        <item>02时</item>
        <item>03时</item>
        <item>04时</item>
        <item>05时</item>
        <item>06时</item>
        <item>07时</item>
        <item>08时</item>
        <item>09时</item>
        <item>10时</item>
        <item>11时</item>
        <item>12时</item>
        <item>13时</item>
        <item>14时</item>
        <item>15时</item>
        <item>16时</item>
        <item>17时</item>
        <item>18时</item>
        <item>19时</item>
        <item>20时</item>
        <item>21时</item>
        <item>22时</item>
        <item>23时</item>
    </string-array>
    <string name="load_failed">加载失败</string>
    <string name="noData">没有内容</string>
    <!-- 语音 -->

    <!-- 消息相关 -->

    <string name="qzone">QQ空间</string>
    <string name="duanxin">短信</string>
    <string name="other">其它</string>
    <string name="share_success">分享成功！</string>
    <string name="share_fail">分享失败</string>
    <string name="share_not_support">当前格式暂不支持此项分享</string>
    <string name="share_cancel">取消分享</string>

    <string name="free_tiket_content">收到好友赠送给你的免费券，可用于兑换本次活动的任意一项大师测算服务。继续分享，可获得更多优惠券</string>
    <string name="weibo_not_installed">未安装微博客户端</string>
</resources>
