<?xml version="1.0" encoding="utf-8"?>
<cn.kuaikuai.trip.customview.KeyboardListenRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title"
        layout="@layout/title_bar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:id="@+id/ll_path"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_line_path"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="path"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/color_333333"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_start_time"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="time"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:textColor="@color/color_333333"
                android:textSize="16dp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_seat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_seat"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/shape_theme_btn"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <cn.kuaikuai.trip.customview.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</cn.kuaikuai.trip.customview.KeyboardListenRelativeLayout>