<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1"
    android:paddingBottom="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:background="@drawable/shape_white_r16">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:src="@drawable/close_grey" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:paddingLeft="@dimen/dp_40"
            android:paddingRight="@dimen/dp_40"
            tools:text="温馨提示"
            android:textColor="@color/color_494949"
            android:textSize="24dp" />

        <cn.kuaikuai.common.image.ETNetImageView
            android:id="@+id/iv_netImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_netImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="18dp"
            android:paddingLeft="25dp"
            tools:text="@string/free_tiket_content"
            android:paddingRight="25dp"
            android:textColor="@color/color_91999f"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_content"
            android:background="@drawable/shape_g_4facfe_66ccff_lb16_rb16">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_cancel"
                android:textColor="@color/white_50"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_ok"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>