<?xml version="1.0" encoding="utf-8"?>
<cn.kuaikuai.trip.customview.KeyboardListenRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/titlebar_height"
        android:layout_alignParentRight="true"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:src="@drawable/icon_close" />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_close"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/login_app_phone"
            android:textColor="@color/color_333333"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="#0000"
            android:drawableLeft="@drawable/login_icon_phone"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_phone_num_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textCursorDrawable="@null"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_EAEAEA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_identify_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0000"
                android:drawableLeft="@drawable/login_icon_code"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_identify_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@null"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/btn_identify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_identify_btn"
                android:gravity="center"
                android:paddingLeft="6dp"
                android:paddingTop="4dp"
                android:paddingRight="6dp"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:text="@string/btn_identify"
                android:textColor="@color/color_999999"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/tv_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:text="52s"
                android:textColor="@color/color_999999"
                android:textSize="13dp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:visibility="gone"
            android:background="@color/color_EAEAEA" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/shape_theme_btn"
            android:text="@string/str_enter_app"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_other"
        android:visibility="gone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/color_efefef" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:text="其他登录方式"
            android:textColor="@color/color_666666"
            android:textSize="12dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/color_efefef" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_login_weixin"
            android:drawablePadding="8dp"
            android:text="微信登录"
            android:textColor="@color/color_999999"
            android:textSize="11dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我已阅读并同意"
            android:textColor="@color/color_999999"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_user_agreement"
            android:textColor="@color/color_999999"
            android:textSize="12dp" />
    </LinearLayout>

    <cn.kuaikuai.trip.customview.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</cn.kuaikuai.trip.customview.KeyboardListenRelativeLayout>