<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_details_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_title"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical"
            android:paddingRight="8dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/s_seg_blank"
                    android:checked="true"
                    android:textSize="16sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/s_seg_blank" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearLayout_glnl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <cn.kuaikuai.trip.customview.ETIconTextView
                    android:id="@+id/textView_gongli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp" />

                <cn.kuaikuai.trip.customview.ETIconTextView
                    android:id="@+id/textView_nongli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_datepickerdialog_bottomTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center">

        <cn.kuaikuai.trip.view.wheel.WheelView
            android:id="@+id/year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <cn.kuaikuai.trip.view.wheel.WheelView
            android:id="@+id/month"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <cn.kuaikuai.trip.view.wheel.WheelView
            android:id="@+id/day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <cn.kuaikuai.trip.view.wheel.WheelView
            android:id="@+id/hour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:background="@color/light_grey_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:padding="0dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_list_bg"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/light_grey_line"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_list_bg"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>